Challenge1/internet.tf
resource "aws_internet_gateway" "gw" {

  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "InternetGW-3Tier"
    }

}

resource "aws_route" "internet_access" {

  route_table_id = aws_vpc.vpc.main_route_table_id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.gw.id

}
